All documentation added